<resources>
    <!--
                  APPLICATION                              -->
    <string name="app_name">Lvrn project</string>
    <string name="app_key">k4b9v3xj9o793vk</string>
    <!--
                  ACTIVITY                                 -->
    <string name="title_activity_main">All Notes</string>
    <!--
                  NAVIGATION DRAWER                        -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--
                  ITEM                                     -->
    <!--item notes-->
    <string name="item_notes_title">Title</string>
    <string name="item_notes_date_of_created">Date of Created</string>
    <string name="item_notes_prompt_text_note">Prompt Text</string>
    <string name="item_note_title_note">Title notes</string>
    <!--
                  FRAGMENT                                 -->
    <!--dialog fragment tag editing-->
    <string name="dialog_fragment_choose_tags">Choose tags</string>
    <string name="dialog_fragment_cancel_button">Cancel</string>
    <string name="dialog_fragment_ok_button">OK</string>
    <string name="dialog_fragment_add_tag_hint">Add tag…</string>
    <!--fragment note detail  -->
    <string name="note_detail_label_created">Created</string>
    <string name="note_detail_label_updated">Updated</string>
    <string name="hint_you_edit_tags">Your Edit Tags</string>
    <!--dialog fragment create notebook -->
    <string name="dialog_fragment_creating_notebook_creating_notebook">Creating notebook</string>
    <string name="dialog_fragment_creating_notebook_ok">OK</string>
    <string name="dialog_fragment_creating_notebook_reset">Reset</string>
    <!--dialog fragment create notebook selection-->
    <string name="dialog_fragment_notebook_selection_get_notebook">Get Notebook</string>
    <string name="dialog_fragment_notebook_selection_create_notebook">Create notebook</string>
    <string name="dialog_fragment_notebook_selection_choose_notebook">Choose notebook</string>
    <string name="dialog_fragment_creating_notebook_cancel" >Cancel</string>
    <string name="dialog_fragment_notebook_selection_reset_notebook">reset notebook</string>

    <!--
                  MENU                                     -->
    <!--drawer menu  -->
    <string name="drawer_main_menu_all_notes">All notes</string>
    <string name="drawer_main_menu_favourites">Favourites</string>
    <string name="drawer_main_menu_trash">Trash</string>
    <string name="drawer_main_menu_notebooks">Notebooks</string>
    <string name="drawer_main_menu_open_tasks">Open tasks</string>
    <string name="drawer_main_menu_tags">Tags</string>
    <string name="drawer_main_menu_profiles">Profiles</string>
    <string name="drawer_main_menu_synchronization">Synchronization</string>
    <!--active note menu  -->
    <string name="active_note_menu_done">done</string>
    <string name="active_note_menu_notebook">notebook</string>
    <!--fragment all notes menu  -->
    <string name="fragment_all_notes_menu_search">search</string>
    <string name="fragment_all_notes_menu_sync">Sync</string>
    <string name="fragment_all_notes_menu_sync_sort_by">Sort by</string>
    <string name="fragment_all_notes_menu_sync_settings">Settings</string>
    <string name="fragment_all_notes_menu_sync_about">About</string>
    <string name="fragment_all_notes_menu_search_query_hint">Search by note title</string>
    <string name="fab_start_note">Note</string>
    <string name="fab_start_notebook">Notebook</string>
    <!--
                   HINT                                    -->
    <!--hint -->
    <string name="hint_you_notebook_name">Your Notebook name</string>
    <string name="hint_you_updated_time">Your updated time</string>
    <string name="hint_you_created_time">Your updated time</string>
    <string name="hint_prompt_text_detail_note">This is Prompt Text</string>
    <string name="hint_you_tag_name">Your Tag name</string>
    <string name="hint_your_task_name">Your task name</string>
    <string name="hint_enter_your_notebook_name">Enter your notebook name</string>
    <string name="hint_dialog_notebook_selection_notebook_not_choose">Notebook not chosen</string>
    <string name="favorite_notes_empty_text">There are no favourites notes</string>
    <string name="dialog_delete_note_title">Are you sure?</string>
    <string name="dialog_delete_note_text">The note will be moved to trash.</string>
    <string name="dialog_delete_note_forever_text">The note will be removed for ever!</string>
    <string name="dialog_delete_note_confirm_btn">Confirm</string>
    <string name="dialog_delete_note_cancel_btn">Cancel</string>
    <string name="trash_notes_empty_text">There are no trash notes</string>


</resources>
