<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stat_search_black_24dp"
        android:title="@string/fragment_all_notes_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/item_action_sync"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stat_sync_black_24dp"
        android:title="@string/fragment_all_notes_menu_sync"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_sort_by"
        android:orderInCategory="100"
        android:title="@string/fragment_all_notes_menu_sync_sort_by"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_settings"
        android:orderInCategory="100"
        android:title="@string/fragment_all_notes_menu_sync_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_about"
        android:orderInCategory="100"
        android:title="@string/fragment_all_notes_menu_sync_about"
        app:showAsAction="never"/>

</menu>
