<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.github.android.lvrn.lvrnproject.view.dialog.notebookselection.impl.NotebookSelectionDialogFragmentImpl">

    <TextView
        android:id="@+id/tv_create_notebook_dialog_dialog_fragment_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_fragment_notebook_selection_get_notebook"
        android:textColor="@color/main_green_themes_app"
        android:textSize="24sp" />

    <View
        android:id="@+id/view_separator_dialog_fragment_dialog_fragment_selection"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/tv_create_notebook_dialog_dialog_fragment_selection"
        android:background="@color/main_green_themes_app" />

    <Button
        android:id="@+id/btn_create_notebook_dialog_fragment_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_separator_dialog_fragment_dialog_fragment_selection"
        android:layout_margin="16dp"
        android:background="@color/main_green_themes_app"
        android:text="@string/dialog_fragment_notebook_selection_create_notebook"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_create_notebook_choose_parent_dialog_fragment_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_create_notebook_dialog_fragment_selection"
        android:layout_margin="16dp"
        android:text="@string/dialog_fragment_notebook_selection_choose_notebook"
        android:textColor="@color/main_green_themes_app"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_notebooks_dialog_fragment_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relative_layout_create_notebook_dialog_fragment_selection"
        android:layout_below="@+id/tv_create_notebook_choose_parent_dialog_fragment_selection"
        android:scrollbars="vertical"/>

    <RelativeLayout
        android:id="@+id/relative_layout_create_notebook_dialog_fragment_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btn_create_notebook_cancel_dialog_fragment_selection"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_toLeftOf="@+id/btn_create_notebook_ok_dialog_fragment_selection"
            android:background="@android:color/transparent"
            android:text="@string/dialog_fragment_creating_notebook_cancel"
            android:textColor="@color/main_green_themes_app"/>

        <Button
            android:id="@+id/btn_create_notebook_ok_dialog_fragment_selection"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:paddingRight="8dp"
            android:text="@string/dialog_fragment_creating_notebook_ok"
            android:textColor="@color/main_green_themes_app"/>

    </RelativeLayout>

</RelativeLayout>
