<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_notes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@android:color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ImageButton
            android:id="@+id/im_btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_star_white_24dp" />

        <TextView
            android:id="@+id/tv_title_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/im_btn_favorite"
            android:text="@string/item_notes_title"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_prompt_text_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_note"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorBlack"
            android:text="@string/item_notes_prompt_text_note"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_date_created_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_prompt_text_note"
            android:layout_marginTop="4dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:text="@string/item_notes_date_of_created"
            android:textColor="@color/fab_colorNormal"
            android:textSize="13sp" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
