<?xml version="1.0" encoding="utf-8"?>

<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_reveal_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@android:color/transparent"
    app:dragEdge="right"
    app:mode="same_level">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/restore_layout"
            android:layout_width="80dp"
            android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_restore_24_black" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="Restore"
            android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/delete_layout"
            android:layout_width="80dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:src="@drawable/ic_menu_delete_black_24dp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="Delete"
                android:textSize="12sp" />

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <ImageButton
                android:id="@+id/im_btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_star_white_24dp" />

            <TextView
                android:id="@+id/tv_title_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="30dp"
                android:layout_toStartOf="@+id/im_btn_favorite"
                android:text="@string/item_notes_title"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_prompt_text_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_note"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/item_notes_prompt_text_note"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_date_created_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_prompt_text_note"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/item_notes_date_of_created"
                android:textColor="@color/fab_colorNormal"
                android:textSize="13sp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</com.chauthai.swipereveallayout.SwipeRevealLayout>
